--- a/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
+++ b/src/pages/CheatSheets/Css/Flexbox/FlexboxCheatSheet.styles.css
@@ -15,7 +15,7 @@
 @media screen and (min-width: 20em) {
   /*Contains everything but footer - useful for desktop media queries where footer is visible*/
   .cheat-sheet-container {
-    height: calc(var(--vh, 1vh) * 90);
+    height: var(--content-full-page);
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -50,9 +50,8 @@
     align-items: center;
     justify-content: center;
     height: calc(
-      var(--vh, 1vh) * 100 - var(--header-mobile-height) -
-        var(--title-mobile-height) - var(--button-actionable-mobile-height) * 2 -
-        1.2rem - 0.25rem
+      var(--content-full-page) - var(--title-mobile-height) -
+        var(--button-actionable-mobile-height) * 2 - 1.2rem - 0.25rem
     );
   }
 }
